--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@next/font": "13.3.1",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.20.0",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "styled-components": "^5.3.10"
   }
 }
